<resources>
    <string name="app_name">KMSServers</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">KM Systems Servers</string>
    <string name="nav_header_subtitle">Type panel</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Servers</string>
    <string name="title_home">Your servers</string>
    <string name="menu_users">Users</string>
    <string name="title_activity_login">KM Systems Servers</string>
    <string name="prompt_email">Логин или почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_username">Имя пользователя</string>
    <string name="prompt_company">Компания</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome, "</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>
    <string name="toggle_admin">admin</string>
    <string name="toggle_user">user</string>
    <string name="name_user">Anaxita</string>
    <string name="email_user">creative@mail.ru</string>
    <string name="menu_server_start">Пуск</string>
    <string name="menu_server_cancel">Завершение работы</string>
    <string name="menu_server_off">Выключение</string>
    <string name="menu_server_properties">Свойства</string>
    <string name="menu_user_edit">Редактировать</string>
    <string name="menu_user_servers">Сервера</string>
    <string-array name="prompt_user_role">
        <item>Обычный пользователь</item>
        <item>Администратор</item>
    </string-array>

    <string name="invalid_username">Login must be >3 characters</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">KM Systems Servers</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_exit">Exit</string>
    <string name="o" />
    <string name="name_server">Server</string>
    <string name="network">Network</string>
    <string name="connection">Сonnection</string>
    <string name="title_activity_start">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="server_power">Power</string>
    <string name="menu_add">Add</string>
    <string name="menu_search">Search</string>
    <string name="off_server">Выключить сервер?</string>
    <string name="dop_func">Дополнительные функции:</string>
    <string name="check_force">Принудительное выключение*</string>
    <string name="check_force_text">* Принудительное выключение может привести к повреждению системы и потере данных. Используйте только в экстренных ситуациях.</string>
    <string name="cancel">Отмена</string>
    <string name="power_off">Выключить</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="edit_user">Редактировать пользователя</string>
</resources>