<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:background="@drawable/fui_idp_button_background_google"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/off_server"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/dop_func"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <CheckBox
            android:id="@+id/checkBox_dialog_force"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@drawable/button_checkbox"
            android:checked="false"
            android:fontFamily="@font/roboto"
            android:paddingStart="10dp"
            android:text="@string/check_force"
            android:textSize="9sp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/check_force_text"
            android:textAlignment="center"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dialog_cancel"
                style="@style/FirebaseUI.VerifyPhoneButton"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FFFFFF"
                android:backgroundTintMode="src_in"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="11sp"
                android:typeface="normal"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/button_dialog_power_off"
                style="@style/FirebaseUI.VerifyPhoneButton"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:backgroundTint="#E02222 "
                android:backgroundTintMode="src_in"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/power_off"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="11sp"
                android:typeface="normal"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
