<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_banner_background"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/name_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/name_server"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/network_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:showText="false"
                android:splitTrack="false"
                android:text="@string/network" />

            <Switch
                android:id="@+id/connection_swicth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:showText="false"
                android:splitTrack="false"
                android:text="@string/connection" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>