<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fui_transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_servers">

        <LinearLayout
            android:id="@+id/linlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/card"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/admin_name_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:maxWidth="150dp"
                    android:text="@string/email_user"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/button_usertype_toggle"
                    android:layout_width="50dp"
                    android:layout_height="15dp"

                    android:layout_gravity="top"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/button_toggle"
                    android:checked="true"
                    android:clickable="false"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    android:textIsSelectable="false"
                    android:textOff="@string/toggle_user"
                    android:textOn="@string/toggle_admin"
                    android:textSize="11sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/admin_subname_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:maxWidth="150dp"
                android:text="@string/name_user"
                android:textSize="12sp" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:translationZ="3dp"
            app:cardBackgroundColor="@color/colorNotVisible"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="false">

            <Button
                android:id="@+id/admin_user_button"
                android:layout_width="53dp"
                android:layout_height="31dp"

                android:background="@drawable/background_button_settings"
                android:clickable="true"
                android:focusable="true" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>