<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fui_transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/background_servers">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linla"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/admin_name_server"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/name_server"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/admin_name_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:maxWidth="150dp"
                android:text="dc.kmsys.ru:3456"
                android:textColor="#AAAAAA"
                android:textSize="12sp" />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/button_server_toggle"
            android:layout_width="30dp"
            android:layout_height="15dp"

            android:layout_marginTop="19dp"
            android:layout_marginBottom="15dp"
            android:layout_toRightOf="@id/linla"
            android:background="@drawable/button_toggle"
            android:checked="true"
            android:clickable="true"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textOff="@string/toggle_off"
            android:textOn="@string/toggle_on"
            android:textSize="11sp" />

        <Spinner
            android:id="@+id/admin_server_spinner"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/button"
            android:backgroundTint="#F1F1F1"
            android:clickable="true"
            android:duplicateParentState="true"
            android:elevation="2dp"
            android:entries="@array/settings_type"
            android:foreground="@drawable/ic_menu_settings"
            android:foregroundGravity="center"
            android:outlineProvider="background"
            android:soundEffectsEnabled="false"
            android:spinnerMode="dropdown"
            android:translationZ="3dp" />

        <ProgressBar
            android:id="@+id/admin_progress_power"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignRight="@id/button_server_toggle"
            android:layout_centerInParent="true"
            android:layout_marginRight="6dp"
            android:visibility="invisible" />

    </RelativeLayout>

</FrameLayout>